fix hero on mobile

--- a/src/HomePage/Section2/Section2.css
+++ b/src/HomePage/Section2/Section2.css
@@ -97,6 +97,7 @@
     aspect-ratio: 5 / 7;
     transform-style: preserve-3d;
     transform-origin: top;
+    will-change: transform;
 }
 
 #section2-card-1 {
@@ -113,6 +114,7 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     border-radius: inherit;
     /* inherit from card */
     overflow: hidden;
@@ -190,11 +192,6 @@
         margin-bottom: 4rem;
     }
 
-    .section2-sticky-header h1 {
-        opacity: 1;
-        transform: none;
-    }
-
     .section2-card-container {
         width: 100%;
         flex-direction: column;
@@ -217,12 +214,5 @@
     #section2-card-3 .section2-card-front,
     #section2-card-3 .section2-card-back {
         border-radius: 20px !important;
-    }
-
-    #section2-card-1,
-    #section2-card-2,
-    #section2-card-3,
-    .section2-card-back {
-        transform: none;
     }
 }
